# stea-project

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: MOB_Rep12_markers.csv  MOB_STEA_deconvolution.ipynb  temp.csv
example/04.CosineSimilarity/: cosine_similarity_Nrsn1.csv
example/05.JS/: jsd_EPL-IN.csv  jsd_GC.csv  jsd_M_TC.csv  jsd_OSNs.csv  jsd_PGC.csv  jsd_all_celltypes.csv
example/stea_analysis/02.MarkerRank/: EPL-IN_marker_ranks.csv  GC_marker_ranks.csv  M_TC_marker_ranks.csv  OSNs_marker_ranks.csv  PGC_marker_ranks.csv
example/stea_analysis/03.ES/: celltype_prediction.csv  stgsea.csv
src/stea/: __init__.py  utils.py
