[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stea"
version = "0.1.0"
description = "Spatial Transcriptome Enrichment Analysis helpers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "scanpy>=1.9",
  "pandas",
  "numpy",
  "seaborn",
  "matplotlib",
  "scipy",
  "scikit-learn",
  "statsmodels"
]

[project.urls]
Homepage = "https://github.com/yiranzhimo/stea-project"